added message history to bot

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,6 @@ yarn-error.log*
 next-env.d.ts
 .env
 package-lock.json
-api/__pycache__/bot.cpython-310.pyc
+api/__pycache__/*
+
+api/util/__pycache__/*
